finition page contact

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DannaCode. || Conception Web - Maintenance - Référencement</title>
+        <title>Contact || DannaCode.</title>
         <meta name="author" content="DannaCode.">
         <meta name="description" content="DannaCode. || Votre solution web tout-en-un : conception de sites (vitrine, e-commerce, landing page), création d'applications avec espace membre, génération de leads, maintenance, et référencement. Simplifiez votre digital avec notre expertise.">
         <meta name="keywords" content="Conception de sites web, Site vitrine, Site e-commerce, Landing page, Application web, Espace membre, Génération de leads, Maintenance web, Référencement SEO, Développement web, Web design, Expérience utilisateur (UX), Interface utilisateur (UI),Création digitale, Stratégie web, Solutions numériques, Optimisation de site, Réactivité mobile, Design moderne, Performance web">
@@ -79,15 +79,15 @@
                             </svg>
                         </button>
                         <div id="disclosure-1" class="hidden mt-2 space-y-2 transition duration-700 ease-in-out">
-                            <a href="../demande-de-devis/" class="block font-medium text-font2Danna py-1 leading-7 pl-3 hover:text-flashDanna transition duration-300 ease-in-out">Obtenir un devis gratuit</a>
+                            <a href="../contact/" class="block font-medium bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna py-1 leading-7 pl-3 hover:text-flashDanna transition duration-300 ease-in-out">Obtenir un devis gratuit</a>
                             <a href="tel:+33698118890" class="block font-medium text-gray-300 py-1 leading-7 pl-3 hover:text-white transition duration-300 ease-in-out">+33 6 98 11 88 90</a>
                             <a href="../contact/" class="block font-medium text-gray-100 py-1 leading-7 pl-3 hover:text-white transition duration-300 ease-in-out">Nous écrire</a>
                         </div>
                     </li>
                 </ul>
 
-                <div class="menu-items hidden justify-center items-center mt-6 md:mt-0 md:justify-end md:flex">
-                    <a href="../demande-de-devis/" class="hidden py-2 font-medium text-font2Danna hover:text-flashDanna text-center w-56 md:text-xs md:flex lg:text-base">Obtenir un devis gratuit</a>
+                <div class="hidden mt-6 md:mt-0 md:flex">
+                    <a href="../contact/" class="hidden py-2 font-medium bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna hover:text-flashDanna text-center w-56 md:text-xs md:flex md: lg:text-base">Obtenir un devis gratuit</a>
                 </div>
             </nav>
         </header>
@@ -108,13 +108,85 @@
         | FORMULAIRE |
          ----------->
          <section class="relative flex flex-col lg:flex-row">
-            <div class="cta-striper-contact sm:px-8 px-4 pb-16 pt-6 w-full order-2 md:px-10 md:py-32 lg:w-1/2 lg:order-1">
-                <h2 class="relative">
-                    <span class="block font-hurricane text-shadow text-flashDanna font-extralight text-4xl sm:text-7xl md:text-9xl lg:text-8xl">Un projet en tête ?</span>
-                    <span class="block absolute top-9 font-black text-gray-50 text-shadow font-inter text-xl sm:text-3xl sm:top-14 md:text-4xl md:top-28 lg:text-3xl lg:top-20">Discutons-en !</span>
+            <div class="cta-striper-contact sm:px-8 px-2 pb-16 pt-6 w-full order-1 md:px-10 md:py-32 lg:w-1/2 lg:order-2">
+                <h2 class="relative px-3 md:-top-16">
+                    <span class="block font-hurricane text-shadow text-flashDanna font-extralight text-4xl sm:text-7xl md:text-8xl lg:text-6xl">Un projet en tête ?</span>
+                    <span class="block absolute top-9 font-black text-gray-50 text-shadow font-inter text-xl sm:text-3xl sm:top-14 md:text-4xl md:top-20 lg:text-3xl lg:top-20 xl:top-12">Discutons-en !</span>
                 </h2>
+                <h5 class="px-3 mt-9 font-semibold text-gray-400 md:mt-1 sm:text-lg md:text-xl">Comment nous joindre ?</h5>
+                <div class="grid grid-cols-2 gap-2">
+                    <div class="col-span-2">
+                        <div class="grid grid-rows-2 grid-flow-col gap-2 w-full bg-navDanna pr-2 py-4 my-3 rounded shadow-sm shadow-gray-300 transition-all duration-150 ease-in-out hover:shadow hover:shadow-gray-50 sm:w-80 md:w-96 lg:w-80 xl:w-96">
+                            <div class="row-span-3 flex justify-center">
+                                <img src="../assets/images/icon/telephone-fill.svg" alt="" class="w-10">
+                            </div>
+                            <p class="col-span-2 mt-1 text-xs font-medium text-gray-200 underline">Téléphone:</p>
+                            <a href="tel:+33698118890" class="row-span-2 col-span-2 text-gray-300 text-xs font-extrabold">+33 6 98 11 88 90</a>
+                        </div>
+                    </div>
+                    <div class="col-span-2">
+                        <div class="grid grid-rows-2 grid-flow-col gap-2 w-full bg-navDanna pl-1 pr-2 py-4 my-2 rounded shadow-sm shadow-gray-300 transition-all duration-150 ease-in-out hover:shadow hover:shadow-gray-50 sm:w-80 md:w-96 lg:w-80 xl:w-96">
+                            <div class="row-span-3 flex justify-center">
+                                <img src="../assets/images/icon/envelope-at-fill.svg" alt="" class="w-10 mx-5">
+                            </div>
+                            <p class="col-span-2 mt-1 text-xs font-medium text-gray-200 underline">Email:</p>
+                            <a href="mailto:contact@dannacode.com?subject=Demande%20d'informations" class="row-span-2 col-span-2 text-gray-300  text-xs font-extrabold">christophedanna06@gmail.com</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex justify-center mt-4">
+                    <img src="../assets/images/carte-alpes-maritimes-removebg-preview.png" alt="" class="w-60 saturate-50">
+                </div>
             </div>
-        
+            <div class="cta-striper-contact order-2 lg:order-1 lg:w-1/2">
+                <h2 class="py-3 px-4 mb-3 leading-4">
+                    <span class="text-gray-50 font-black text-lg lg:text-xl xl:text-3xl">Prêt à discuter de vos besoins ?</span>
+                    <span class="block text-gray-400 font-light text-xs lg:text-sm xl:text-base">Planifions ensemble une rencontre pour explorer comment je peux vous assister au mieux. Remplissez le formulaire ci-dessous pour fixer un rendez-vous.</span>
+                </h2>
+                <form id="contact-form" class="border border-flashDanna rounded mt-5 mx-3 py-4 bg-navDanna" method="post" action="" role="form">
+                    <div class="grid grid-cols-4 gap-x-3 mx-4">
+                        <div class="col-span-2">
+                            <label for="lastname" class="text-gray-50">Nom <span class="text-red-700">*</span></label>
+                            <input id="lastname" type="text" class="bg-gray-700 text-gray-200 ring-1 ring-slate-900/10 shadow-sm rounded-md p-2 mb-4 caret-flashDanna focus:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-flashDanna transition ease-in-out duration-150 w-full" placeholder="Votre nom" required>
+                        </div>
+                        <div class="col-span-2">
+                            <label for="firstname" class="text-gray-50">Prénom <span class="text-red-700">*</span></label>
+                            <input type="text" class="bg-gray-700 text-gray-200 ring-1 ring-slate-900/10 shadow-sm rounded-md p-2 mb-4 caret-flashDanna focus:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-flashDanna transition ease-in-out duration-150 w-full" placeholder="Votre prénom" required>
+                        </div>
+                        <div class="col-span-4 sm:col-span-2">
+                            <label for="email" class="text-gray-50">Email <span class="text-red-700">*</span></label>
+                            <input id="email" type="email" class="bg-gray-700 text-gray-200 ring-1 ring-slate-900/10 shadow-sm rounded-md p-2 mb-4 caret-flashDanna focus:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-flashDanna transition ease-in-out duration-150 w-full" placeholder="Votre email" required>
+                        </div>
+                        <div class="col-span-4 sm:col-span-2">
+                            <label for="phone" class="text-gray-50">Téléphone <span class="text-red-700">*</span></label>
+                            <input id="phone" type="tel" class="bg-gray-700 text-gray-200 ring-1 ring-slate-900/10 shadow-sm rounded-md p-2 mb-4 caret-flashDanna focus:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-flashDanna transition ease-in-out duration-150 w-full" placeholder="Votre téléphone" required>
+                        </div>
+                        <div class="col-span-4">
+                            <label for="company" class="text-gray-50">Entreprise</label>
+                            <input id="company" type="text" class="col-span-2 bg-gray-700 text-gray-200 ring-1 ring-slate-900/10 shadow-sm rounded-md p-2 mb-4 caret-flashDanna focus:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-flashDanna transition ease-in-out duration-150 w-full" placeholder="Votre entreprise">
+                        </div>
+                        <div class="col-span-3">
+                            <label for="date" class="block text-gray-50">Date <span class="text-red-700">*</span></label>
+                            <input id="date" type="date" class="bg-gray-700 text-gray-200 ring-1 ring-slate-900/10 shadow-sm rounded-md p-2 mb-4 caret-flashDanna focus:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-flashDanna transition ease-in-out duration-150 w-full" placeholder="Date" required>
+                        </div>
+                        <div class="">
+                            <label for="time" class="block text-gray-50">Heure <span class="text-red-700">*</span></label>
+                            <input type="time" class="bg-gray-700 text-gray-200 ring-1 ring-slate-900/10 shadow-sm rounded-md p-2 mb-4 caret-flashDanna focus:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-flashDanna transition ease-in-out duration-150 w-full" placeholder="Heure" required>
+                        </div>
+                        <div class="col-span-4">
+                            <label for="message" class="text-gray-50">Message <span class="text-red-700">*</span></label>
+                            <textarea  class="bg-gray-700 text-gray-200 ring-1 ring-slate-900/10 shadow-sm rounded-md p-2 mb-4 caret-flashDanna focus:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-flashDanna transition ease-in-out duration-150 w-full" placeholder="Votre message..." required></textarea>
+                        </div>
+                        <div class="col-span-4">
+                            <input required class="form-check-input accent-fontDanna" type="checkbox" value="accepted" name="checkbox" id="flexCheckIndeterminate">
+                            <label for="flexCheckIndeterminate" class="text-gray-200 font-extralight text-sm"><span class="text-red-700">*</span> En soumettant ce formulaire, j'accepte que mes données à caractère personnel saisies soient traitées dans le cadre de la demande de devis et de la relation commerciale qui peut en découler. Pour en savoir plus sur la gestion de vos données personnelles et pour exercer vos droits, reportez-vous à notre <a href="../mentions-legales" class="text-flashDanna underline transition-all ease-in-out duration-150 hover:text-fontDanna">politique de gestion des données</a>. </label>
+                        </div>
+                        <div class="bg-white w-40 h-10 flex items-center flex-col-reverse mt-5">
+                            <input class="flex justify-center items-center py-2 px-8 w-40 h-10 text-lg text-navDanna bg-flashDanna transition-all ease-in-out duration-75 hover:translate-x-1 hover:-translate-y-1 md:mt-10 md:text-xl" type="submit" value="Envoyer">
+                        </div>
+                    </div>
+                </form>
+            </div>
          </section>
         <!------- 
         | FOOTER |
@@ -176,19 +248,26 @@
                         <li class="my-2">
                             <a href="" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Contact</a>
                         </li>
-                        <li class="my-2">
+                        <!-- <li class="my-2">
                             <a href="../demande-de-devis/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Demande de devis</a>
-                        </li>
+                        </li> -->
                         <li class="mt-2">
                             <a href="../mentions-legales/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Mentions légales</a>
                         </li>
                     </ul>
-                    
                 </div>
             </div>
         </footer>
         <div class="py-4 w-full text-center">
-            <p class="font-extralight text-sm text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="../mentions-legales/" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
+            <p class="font-extralight text-xs text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="../mentions-legales/" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
+        </div>
+        <!-------- 
+        | LOADER |
+         -------->
+        <div class="fixed w-full h-full bg-rgba flex justify-center items-center flex-row gap-2 z-50 top-0 left-0" id="loader">
+            <div class="w-5 h-5 rounded-full bg-bodyDanna animate-bounce"></div>
+            <div class="w-5 h-5 rounded-full bg-fontDanna animate-bounce [animation-delay:-.3s]"></div>
+            <div class="w-5 h-5 rounded-full bg-flashDanna animate-bounce [animation-delay:-.5s]"></div>
         </div>
       <script type="module" src="../assets/js/script.js"></script>
     </body>
