--- a/index.html
+++ b/index.html
@@ -62,21 +62,20 @@
                         </div>
                         <div class="hidden absolute md:right-0 md:top-10 z-10 mt-2 w-56 origin-top-right rounded-md bg-navDanna shadow-lg ring-1 ring-flashDanna ring-opacity-50 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
                             <div class="py-1" role="none">
-                              <a href="demande-de-devis/" class="text-flashDanna block px-4 py-2 text-sm hover:bg-bodyDanna hover:text-green-500 transition duration-300 ease-in-out md:hidden" role="menuitem" tabindex="-1" id="menu-item-0">Obtenir un devis gratuit</a>
                               <a href="tel:+33698118890" class="text-gray-300 block px-4 py-2 text-sm hover:bg-bodyDanna hover:text-white transition duration-300 ease-in-out" role="menuitem" tabindex="-1" id="menu-item-1">+33 6 98 11 88 90</a>
                               <a href="contact/" class="text-gray-300 block px-4 py-2 text-sm hover:bg-bodyDanna hover:text-white transition duration-300 ease-in-out" role="menuitem" tabindex="-1" id="menu-item-2">Nous écrire</a>
                             </div>
                         </div>
                     </li>
                     <li class="py-2 pl-3 group relative  md:hidden">
-                        <button type="button" class="flex items-center font-medium text-lg text-zinc-300 hover:text-white" id="menu-button-phone" aria-controls="disclosure-1" aria-expanded="false">
+                        <button type="button" class="flex items-center font-medium text-lg text-zinc-100 hover:text-white relative after:scale-x-0 after:h-0.5 after:bottom-0 after:left-0 after:absolute after:origin-bottom-left after:transform after:ease-in-out after:duration-200 w-auto after:w-full group-hover:after:scale-x-75 group-hover:after:origin-bottom-left after:bg-flashDanna  transition duration-400 ease-in-out md:flex md:items-center md:text-base lg:text-lg" id="menu-button-phone" aria-controls="disclosure-1" aria-expanded="false">
                             Contact
                             <svg class="ml-2 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                 <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
                             </svg>
                         </button>
                         <div id="disclosure-1" class="hidden mt-2 space-y-2 transition duration-700 ease-in-out">
-                            <a href="demande-de-devis/" class="block font-medium text-font2Danna py-1 leading-7 pl-3 hover:text-flashDanna transition duration-300 ease-in-out">Obtenir un devis gratuit</a>
+                            <a href="contact/" class="block font-medium bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna py-1 leading-7 pl-3 hover:text-flashDanna transition duration-300 ease-in-out">Obtenir un devis gratuit</a>
                             <a href="tel:+33698118890" class="block font-medium text-gray-300 py-1 leading-7 pl-3 hover:text-white transition duration-300 ease-in-out">+33 6 98 11 88 90</a>
                             <a href="contact/" class="block font-medium text-gray-300 py-1 leading-7 pl-3 hover:text-white transition duration-300 ease-in-out">Nous écrire</a>
                         </div>
@@ -84,7 +83,7 @@
                 </ul>
 
                 <div class="menu-items hidden justify-center items-center mt-6 md:mt-0 md:justify-end md:flex">
-                    <a href="demande-de-devis/" class="hidden py-2 font-medium text-font2Danna hover:text-flashDanna text-center w-56 md:text-xs md:flex lg:text-base">Obtenir un devis gratuit</a>
+                    <a href="contact/" class="hidden py-2 font-medium bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna hover:text-flashDanna text-center w-56 md:text-xs md:flex lg:text-base">Obtenir un devis gratuit</a>
                 </div>
             </nav>
         </header>
@@ -285,7 +284,7 @@
                     </div>
                 </div>
                 <div class="w-full h-12 flex items-center flex-col-reverse mt-10 mb-8">
-                    <a href="demande-de-devis/" class="flex justify-center items-center w-72 h-10 text-flashDanna border-double  border-2 border-flashDanna hover:bg-flashDanna hover:text-navDanna hover:scale-105 transition-all duration-150 font-semibold uppercase">Besoin d'un devis ?</a>
+                    <a href="contact/" class="flex justify-center items-center w-72 h-10 text-flashDanna border-double  border-2 border-flashDanna hover:bg-flashDanna hover:text-navDanna hover:scale-105 transition-all duration-150 font-semibold uppercase">Besoin d'un devis ?</a>
                 </div>
             </div>
          </section>
@@ -349,9 +348,9 @@
                         <li class="my-2">
                             <a href="contact/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Contact</a>
                         </li>
-                        <li class="my-2">
+                        <!-- <li class="my-2">
                             <a href="demande-de-devis/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Demande de devis</a>
-                        </li>
+                        </li> -->
                         <li class="mt-2">
                             <a href="mentions-legales/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Mentions légales</a>
                         </li>
@@ -362,6 +361,19 @@
         </footer>
         <div class="py-4 w-full text-center">
             <p class="font-extralight text-xs text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="mentions-legales/" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
+        </div>
+        <a href="#" class="" id="scrollButton">
+            <span id="scrollIcon">
+                <i class="bi bi-chevron-up" style="color: var(--color-flash);"></i>
+            </span>
+        </a>
+        <!-------- 
+        | LOADER |
+         -------->
+         <div class="fixed w-full h-full bg-rgba flex justify-center items-center flex-row gap-2 z-50 top-0 left-0" id="loader">
+            <div class="w-5 h-5 rounded-full bg-bodyDanna animate-bounce"></div>
+            <div class="w-5 h-5 rounded-full bg-fontDanna animate-bounce [animation-delay:-.3s]"></div>
+            <div class="w-5 h-5 rounded-full bg-flashDanna animate-bounce [animation-delay:-.5s]"></div>
         </div>
       <script type="module" src="./assets/js/script.js"></script>
       <script defer src="assets/js/script-accueil.js"></script>
