--- a/services/index.html
+++ b/services/index.html
@@ -79,7 +79,7 @@
                             </svg>
                         </button>
                         <div id="disclosure-1" class="hidden mt-2 space-y-2 transition duration-700 ease-in-out">
-                            <a href="../demande-de-devis/" class="block font-medium text-font2Danna py-1 leading-7 pl-3 hover:text-flashDanna transition duration-300 ease-in-out">Obtenir un devis gratuit</a>
+                            <a href="../contact/" class="block font-medium bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna py-1 leading-7 pl-3 hover:text-flashDanna transition duration-300 ease-in-out">Obtenir un devis gratuit</a>
                             <a href="tel:+33698118890" class="block font-medium text-gray-300 py-1 leading-7 pl-3 hover:text-white transition duration-300 ease-in-out">+33 6 98 11 88 90</a>
                             <a href="../contact/" class="block font-medium text-gray-300 py-1 leading-7 pl-3 hover:text-white transition duration-300 ease-in-out">Nous écrire</a>
                         </div>
@@ -87,7 +87,7 @@
                 </ul>
 
                 <div class="menu-items hidden justify-center items-center mt-6 md:mt-0 md:justify-end md:flex">
-                    <a href="../demande-de-devis/" class="hidden py-2 font-medium text-font2Danna hover:text-flashDanna text-center w-56 md:text-xs md:flex lg:text-base">Obtenir un devis gratuit</a>
+                    <a href="../contact/" class="hidden py-2 font-medium bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna hover:text-flashDanna text-center w-56 md:text-xs md:flex lg:text-base">Obtenir un devis gratuit</a>
                 </div>
             </nav>
         </header>
@@ -255,9 +255,9 @@
                         <li class="my-2">
                             <a href="../contact/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Contact</a>
                         </li>
-                        <li class="my-2">
+                        <!-- <li class="my-2">
                             <a href="../demande-de-devis/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Demande de devis</a>
-                        </li>
+                        </li> -->
                         <li class="mt-2">
                             <a href="../mentions-legales/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Mentions légales</a>
                         </li>
@@ -268,6 +268,14 @@
         </footer>
         <div class="py-4 w-full text-center">
             <p class="font-extralight text-xs text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="../mentions-legales/" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
+        </div>
+        <!-------- 
+        | LOADER |
+         -------->
+         <div class="fixed w-full h-full bg-rgba flex justify-center items-center flex-row gap-2 z-50 top-0 left-0" id="loader">
+            <div class="w-5 h-5 rounded-full bg-bodyDanna animate-bounce"></div>
+            <div class="w-5 h-5 rounded-full bg-fontDanna animate-bounce [animation-delay:-.3s]"></div>
+            <div class="w-5 h-5 rounded-full bg-flashDanna animate-bounce [animation-delay:-.5s]"></div>
         </div>
       <script type="module" src="../assets/js/script.js"></script>
     </body>
