--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               </div>
             </div>
             <div class="h-40 w-full relative overflow-hidden order-1 sm:h-80 lg:static lg:w-1/2 lg:h-full lg:order-2">
-              <img loading="lazy" src="assets/images/accueil/Travail-equipe.jpg" alt="homme au travail" class=" absolute w-full object-cover object-center lg:h-full lg:w-1/2">
+              <img loading="lazy" src="https://res.cloudinary.com/dilp6xqmb/image/upload/v1701768623/Travail-equipe.jpg" alt="homme au travail" class=" absolute w-full object-cover object-center lg:h-full lg:w-1/2">
             </div>
         </section>
         <!--------- 
