--- a/mentions-legales/index.html
+++ b/mentions-legales/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DannaCode. || Conception Web - Maintenance - Référencement</title>
+        <title>Mentions légales || DannaCode.</title>
         <meta name="author" content="DannaCode.">
         <meta name="description" content="DannaCode. || Votre solution web tout-en-un : conception de sites (vitrine, e-commerce, landing page), création d'applications avec espace membre, génération de leads, maintenance, et référencement. Simplifiez votre digital avec notre expertise.">
         <meta name="keywords" content="Conception de sites web, Site vitrine, Site e-commerce, Landing page, Application web, Espace membre, Génération de leads, Maintenance web, Référencement SEO, Développement web, Web design, Expérience utilisateur (UX), Interface utilisateur (UI),Création digitale, Stratégie web, Solutions numériques, Optimisation de site, Réactivité mobile, Design moderne, Performance web">
@@ -19,12 +19,15 @@
         <!-- Font-family -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Hurricane&family=Inter&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+        <link href="https://fonts.googleapis.com/css2?family=Hurricane&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Righteous&display=swap" rel="stylesheet">
         <!-- Cookie -->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
     </head>
-    <body class="bg-bodyDanna">
-        <header class="w-full bg-navDanna border-b border-gray-400">
+    <body class="bg-gradient-to-br from-fontDanna via-bodyDanna to-navDanna selection:bg-flashDanna selection:text-navDanna">
+        <!------- 
+        | NAVBAR |
+         -------->
+         <header class="fixed w-full bg-navDanna border-b border-gray-400 z-50">
             <nav class="border-b border-gray-400 top-0 z-20 p-4 w-full grid grid-cols-none shadow-sm bg-navDanna md:max-w-8xl md:grid-cols-menu md:shadow-none md:relative md:mx-auto md:border-b-0">
                 
                 <div class="flex justify-between items-center md:justify-center">
@@ -39,14 +42,22 @@
 
                 <ul class="hidden toggle-menu px-1 pt-6 flex-col md:flex md:flex-row md:space-x-10 md:pt-0 md:w-auto md:items-center md:justify-start">
                     <li class="py-2 pl-3">
-                        <a href=".." class="font-medium text-lg text-zinc-300 hover:text-white md:text-base lg:text-lg">Accueil</a>
+                        <div class="group">
+                            <div class="flex">
+                                <a href=".." class="font-medium text-lg text-zinc-300  w-auto relative after:scale-x-0 after:h-0.5 after:bottom-0 after:left-0 after:absolute after:origin-bottom-left after:transform after:ease-in-out after:duration-200  after:w-full group-hover:after:scale-x-100 group-hover:after:origin-bottom-left after:bg-flashDanna hover:text-white md:text-base lg:text-lg">Accueil</a>
+                            </div>
+                        </div>
                     </li>
                     <li class="py-2 pl-3">
-                        <a href="../services/" class="font-medium text-lg text-zinc-100 border-b-2 border-flashDanna hover:text-white transition duration-300 ease-in-out md:text-base lg:text-lg">Services</a>
+                        <div class="group">
+                            <div class="flex">
+                                <a href="../services/" class="font-medium text-lg text-zinc-100 border-b-2 border-flashDanna md:text-base lg:text-lg">Services</a>
+                            </div>
+                        </div>
                     </li>
                     <li class="md:py-2 relative">
-                        <div class=" pl-3">
-                            <button type="button" class="hidden md:flex md:items-center font-medium text-lg text-zinc-300 hover:text-white transition duration-700 ease-in-out md:text-base lg:text-lg" id="menu-button" aria-expanded="true" aria-haspopup="true">
+                        <div class=" pl-3 group"> 
+                            <button type="button" class="hidden font-medium text-lg text-zinc-300 relative after:scale-x-0 after:h-0.5 after:bottom-0 after:left-0 after:absolute after:origin-bottom-left after:transform after:ease-in-out after:duration-200 w-auto after:w-full group-hover:after:scale-x-75 group-hover:after:origin-bottom-left after:bg-flashDanna hover:text-white transition duration-400 ease-in-out md:flex md:items-center md:text-base lg:text-lg" id="menu-button" aria-expanded="true" aria-haspopup="true">
                                 Contact
                                 <svg class="ml-2 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
@@ -55,21 +66,20 @@
                         </div>
                         <div class="hidden absolute md:right-0 md:top-10 z-10 mt-2 w-56 origin-top-right rounded-md bg-navDanna shadow-lg ring-1 ring-flashDanna ring-opacity-50 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
                             <div class="py-1" role="none">
-                              <a href="../demande-de-devis/" class="text-flashDanna block px-4 py-2 text-sm hover:bg-bodyDanna hover:text-green-500 transition duration-300 ease-in-out md:hidden" role="menuitem" tabindex="-1" id="menu-item-0">Obtenir un devis gratuit</a>
                               <a href="tel:+33698118890" class="text-gray-300 block px-4 py-2 text-sm hover:bg-bodyDanna hover:text-white transition duration-300 ease-in-out" role="menuitem" tabindex="-1" id="menu-item-1">+33 6 98 11 88 90</a>
                               <a href="../contact/" class="text-gray-300 block px-4 py-2 text-sm hover:bg-bodyDanna hover:text-white transition duration-300 ease-in-out" role="menuitem" tabindex="-1" id="menu-item-2">Nous écrire</a>
                             </div>
                         </div>
                     </li>
-                    <li class="py-2 pl-3 relative  md:hidden">
-                        <button type="button" class="flex items-center font-medium text-lg text-zinc-300 hover:text-white" id="menu-button-phone" aria-controls="disclosure-1" aria-expanded="false">
+                    <li class="py-2 pl-3 group relative  md:hidden">
+                        <button type="button" class="flex items-center font-medium text-lg text-zinc-300 hover:text-white relative after:scale-x-0 after:h-0.5 after:bottom-0 after:left-0 after:absolute after:origin-bottom-left after:transform after:ease-in-out after:duration-200 w-auto after:w-full group-hover:after:scale-x-75 group-hover:after:origin-bottom-left after:bg-flashDanna  transition duration-400 ease-in-out md:flex md:items-center md:text-base lg:text-lg" id="menu-button-phone" aria-controls="disclosure-1" aria-expanded="false">
                             Contact
                             <svg class="ml-2 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                 <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
                             </svg>
                         </button>
                         <div id="disclosure-1" class="hidden mt-2 space-y-2 transition duration-700 ease-in-out">
-                            <a href="../demande-de-devis/" class="block font-medium text-flashDanna py-1 leading-7 pl-3 hover:text-green-500 transition duration-300 ease-in-out">Obtenir un devis gratuit</a>
+                            <a href="../contact/" class="block font-medium bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna py-1 leading-7 pl-3 hover:text-flashDanna transition duration-300 ease-in-out">Obtenir un devis gratuit</a>
                             <a href="tel:+33698118890" class="block font-medium text-gray-300 py-1 leading-7 pl-3 hover:text-white transition duration-300 ease-in-out">+33 6 98 11 88 90</a>
                             <a href="../contact/" class="block font-medium text-gray-300 py-1 leading-7 pl-3 hover:text-white transition duration-300 ease-in-out">Nous écrire</a>
                         </div>
@@ -77,12 +87,74 @@
                 </ul>
 
                 <div class="menu-items hidden justify-center items-center mt-6 md:mt-0 md:justify-end md:flex">
-                    <a href="../demande-de-devis/" class="hidden px-6 py-2 font-medium text-flashDanna hover:text-[#72cf6a] text-center w-40 md:text-xs md:flex lg:text-base">Obtenir un devis gratuit</a>
+                    <a href="../contact/" class="hidden py-2 font-medium bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna hover:text-flashDanna text-center w-56 md:text-xs md:flex lg:text-base">Obtenir un devis gratuit</a>
                 </div>
             </nav>
         </header>
-        
-        <footer class="bg-navDanna py-5 mt-auto border-y border-gray-400">
+        <!------- 
+        | BANNER |
+         -------->
+         <section>
+            <div class=" bg-banner-mention bg-center bg-cover">
+                <div class="relative px-6 pt-40 pb-16 sm:top-28 sm:pt-20 sm:pb-48 lg:top-28">
+                    <h1 class="text-shadow text-gray-50 font-black font-inter text-center text-3xl sm:text-left sm:text-5xl md:text-7xl xl:text-8xl">
+                        <span>Politique de</span><br>
+                        <span class="text-fontDanna">Confidentialité</span>
+                    </h1>
+                </div>
+            </div>
+        </section>
+        <!--------- 
+        | MENTIONS |
+         ---------->
+         <section class="my-5 mx-5 md:my-7 md:mx-7 lg:mx-16 xl:mx-20">
+            <h1 class="mb-4 text-center text-gray-50 font-bold text-2xl md:text-4xl md:mb-6 xl:text-6xl">Mentions légales</h1>
+            <article class="text-wrap">
+                <h5 class="mb-2 text-gray-50 font-medium md:text-lg xl:text-2xl xl:font-semibold">En vigueur au 01/01/2024</h5>
+                <p class="text-xs text-gray-400 font-light font-serif md:text-sm xl:text-lg">Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la
+                    Confiance dans l’économie numérique, dite L.C.E.N., il est porté à la connaissance des Utilisateurs du site
+                    <span class="text-white font-normal">https://dannacode.com/</span> les présentes mentions légales.
+                    La connexion et la navigation sur le site <span class="text-white font-normal">https://dannacode.com/</span> par l’Utilisateur implique acceptation
+                    intégrale et sans réserve des présentes mentions légales.
+                    Ces dernières sont accessibles sur le site à la rubrique « Mentions légales ».</p>
+            </article>
+            <ul class="my-5 list-[upper-roman] list-inside">
+                <li class="text-white font-bold md:text-lg xl:text-2xl">
+                    Éditeur du site
+                    <p class="text-gray-400 text-xs font-light font-serif mt-2 md:text-sm xl:text-lg">L’édition et la direction de la publication du site <span class="text-white font-normal">https://dannacode.com/</span> est assurée par Christophe D'Anna, dont l’adresse email <a href="mailto:contact@dannacode.com">contact@dannacode.com</a>.</p>
+                </li>
+                <li class="text-white font-bold mt-4 md:text-lg xl:text-2xl">
+                    L'hébergeur
+                    <p class="text-gray-400 text-xs font-light font-serif mt-2 md:text-sm xl:text-lg">L’hébergeur du site <span class="text-white font-normal">https://dannacode.com/</span> est la Société <a href="https://hostinger.fr?REFERRALCODE=1RYOKO14" target="_blank" rel="noopener" class="text-flashDanna font-bold transition-all duration-150 ease-in-out hover:text-fontDanna">Hostinger</a>, dont le siège social
+                        est situé au HOSTINGER INTERNATIONAL LTD, 61 Lordou Vironos Street, 6023 Larnaca, Chypre.</p>
+                </li>
+                <li class="text-white font-bold mt-4 md:text-lg xl:text-2xl">
+                    Accès au site
+                    <p class="text-gray-400 text-xs font-light font-serif mt-2 md:text-sm xl:text-lg">Le site est accessible par tout endroit, 7j/7, 24h/24 sauf cas de force majeure, interruption programmée ou
+                        non et pouvant découlant d’une nécessité de maintenance.
+                        En cas de modification, interruption ou suspension des services le site <span class="text-white font-normal">https://dannacode.com/</span> ne saurait être tenu responsable.</p>
+                </li>
+                <li class="text-white font-bold mt-4 md:text-lg xl:text-2xl">
+                    Collecte des données
+                    <p class="text-gray-400 text-xs font-light font-serif mt-2 md:text-sm xl:text-lg">Le site est exempté de déclaration à la Commission Nationale Informatique et Libertés (CNIL) dans la mesure où il ne collecte aucune donnée concernant les utilisateurs.</p>
+                </li>
+                <li class="text-white font-bold mt-4 md:text-lg xl:text-2xl">
+                    Cookies
+                    <p class="text-gray-400 text-xs font-light font-serif mt-2 md:text-sm xl:text-lg">L’Utilisateur est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement sur son logiciel de navigation. En naviguant sur le site, il les accepte. Un cookie est un élément qui ne permet pas d’identifier l’Utilisateur mais sert à enregistrer des informations relatives à la navigation de celui-ci sur le site Internet. L’Utilisateur pourra désactiver ce cookie par l’intermédiaire des paramètres figurant au sein de son logiciel de navigation.</p>
+                </li>
+                <li class="text-white font-bold mt-4 md:text-lg xl:text-2xl">
+                    Propriété intellectuelle
+                    <p class="text-gray-400 text-xs font-light font-serif mt-2 md:text-sm xl:text-lg">Toute utilisation, reproduction, diffusion, commercialisation, modification de toute ou partie du site
+                        <span class="text-white font-normal">https://dannacode.com/</span>, sans autorisation de l’Editeur est prohibée et pourra entraînée
+                        des actions et poursuites judiciaires telles que notamment prévues par le Code de la propriété intellectuelle
+                        et le Code civil.</p>
+                </li>
+            </ul>
+         </section>
+        <!------- 
+        | FOOTER |
+         -------->
+        <footer class="bg-navDanna py-1 mt-auto border-y border-gray-400">
             <div class="grid grid-cols-1 max-w-xl mx-auto p-4 lg:grid-cols-3 lg:max-w-7xl md:py-10">
                 <div class="ml-2 my-5 order-2 border-b-2 lg:border-0 lg:order-1 lg:ml-6">
                     <h5 class="font-bold text-gray-100 text-xl">Contact</h5>
@@ -139,9 +211,9 @@
                         <li class="my-2">
                             <a href="../contact/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Contact</a>
                         </li>
-                        <li class="my-2">
+                        <!-- <li class="my-2">
                             <a href="../demande-de-devis/" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Demande de devis</a>
-                        </li>
+                        </li> -->
                         <li class="mt-2">
                             <a href="" class="text-gray-400 text-base hover:text-gray-50 transition duration-200 ease-in-out">Mentions légales</a>
                         </li>
@@ -151,7 +223,15 @@
             </div>
         </footer>
         <div class="py-4 w-full text-center">
-            <p class="font-extralight text-sm text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
+            <p class="font-extralight text-xs text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
+        </div>
+        <!-------- 
+        | LOADER |
+         -------->
+         <div class="fixed w-full h-full bg-rgba flex justify-center items-center flex-row gap-2 z-50 top-0 left-0" id="loader">
+            <div class="w-5 h-5 rounded-full bg-bodyDanna animate-bounce"></div>
+            <div class="w-5 h-5 rounded-full bg-fontDanna animate-bounce [animation-delay:-.3s]"></div>
+            <div class="w-5 h-5 rounded-full bg-flashDanna animate-bounce [animation-delay:-.5s]"></div>
         </div>
       <script type="module" src="../assets/js/script.js"></script>
     </body>
