--- a/mentions-legales/index.html
+++ b/mentions-legales/index.html
@@ -51,7 +51,7 @@
                     <li class="py-2 pl-3">
                         <div class="group">
                             <div class="flex">
-                                <a href="../services/" class="font-medium text-lg text-zinc-100 border-b-2 border-flashDanna md:text-base lg:text-lg">Services</a>
+                                <a href="../services/" class="font-medium text-lg text-zinc-300  w-auto relative after:scale-x-0 after:h-0.5 after:bottom-0 after:left-0 after:absolute after:origin-bottom-left after:transform after:ease-in-out after:duration-200  after:w-full group-hover:after:scale-x-100 group-hover:after:origin-bottom-left after:bg-flashDanna hover:text-white md:text-base lg:text-lg">Services</a>
                             </div>
                         </div>
                     </li>
